[metadata]
name = spantom
version = 0.0.2
author = James Rowland
author_email = rowland.208@gmail.com
description = A lightweight tracing library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rowland-208/spantom
project_urls =
    Bug Tracker = https://github.com/rowland-208/spantom/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.extras_require]
dashboard =
    matplotlib
    click
    dash
    dash-bootstrap-components
    pandas
    plotly

[options.entry_points]
console_scripts =
    spantom = spantom.dashboard:main

[options.packages.find]
where = src
